adapatation iPhone Ok + correctifs css pour Firefox (backdrop filter non pris en compte)

--- a/src/components/Pages/About/about.scss
+++ b/src/components/Pages/About/about.scss
@@ -192,8 +192,6 @@
 // Phone
 @media only screen and (max-width : 479px) {
   .about-component {
-    overflow-y: auto;
-    overflow-x: hidden;
     grid-template-columns: 10% 80% 10%;
     grid-template-rows: 10% 30% 60%;
     grid-template-areas: 
@@ -215,6 +213,7 @@
     }
 
     .about-content {
+      min-height: 650px;
       grid-template-columns: 100%;
       grid-template-rows: auto;
       grid-template-areas: 
@@ -250,7 +249,7 @@
           }
           .right {
             font-size: 16px;
-            margin-top: 6px;
+            margin-top: 25px;
           }
         }
       }
