--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,16 +1,51 @@
 @use 'reset';
 @use 'vars';
 
-body {
-  overflow: hidden;
-}
-
-
 #root {
-  height: 100vh;
-  width: 100vw;
   position: relative;
   color: white;
+}
+
+@media only screen and (min-width : 480px) {
+  body {
+    overflow: hidden;
+  }
+  
+  
+  #root {
+    height: 100vh;
+    width: 100vw;
+  }
+}
+
+// iPhone adaptation
+@media only screen and (max-width : 479px) {
+  body {
+    height: 100%;
+    width: 100%;
+    max-height: -webkit-fill-available;
+  }
+  #root {
+    overflow-x: hidden;
+    // overflow-y: hidden;
+
+    height: 100%;
+    max-height: -webkit-fill-available;
+    min-width: 300px;
+    max-width: 100vw;
+    width: 100%;
+    div {
+      .about-component,
+      .home-component {
+        // height: initial;
+      }
+      .about-component {
+        // overflow-y: auto;
+        // min-height: 750px;
+      }
+      
+    }
+  }
 }
 
 
@@ -24,7 +59,6 @@ canvas {
 /**
 *  Glassmorphism
 */
-
 .glassmorphism {
   background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.301), rgba(255, 255, 255, 0.103));
   backdrop-filter: blur(10px);
@@ -41,6 +75,13 @@ canvas {
   border-radius: 20px;
   box-shadow: 10px 10px 60px -8px rgba(0,0,0,0.2);
   z-index: 2;
+}
+@supports not (backdrop-filter: none) {
+  .glassmorphism,
+  .glassmorphism-1 {
+    background: linear-gradient(to bottom right, rgba(110, 110, 110, 0.801), rgba(255, 255, 255, 0.664));
+
+  }
 }
 
 
